--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "TriptoAfsin",
@@ -24,6 +24,6 @@
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7"
   }
 }
