--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "rss-to-json": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
