--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "dotenv": "^8.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "firebase-admin": "^9.11.0",
+    "mongodb": "^4.0.1",
+    "mongoose": "^5.13.3",
     "request": "^2.88.2",
     "rss-to-json": "^1.1.3"
   },
