--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.0",
+    "get-caller-file": "^2.0.5",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
     "request": "^2.88.2",
