--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "author": "TriptoAfsin",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": ">=0.21.2",
     "body-parser": "^1.19.0",
-    "dayjs": "^1.10.5",
-    "dotenv": "^8.6.0",
+    "dayjs": "^1.10.6",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "firebase-admin": "^9.11.0",
+    "firebase-admin": "^9.11.1",
     "get-caller-file": "^2.0.5",
-    "mongodb": "^4.0.1",
-    "mongoose": "^5.13.3",
+    "mongodb": "^4.1.1",
+    "mongoose": "^5.13.9",
     "request": "^2.88.2",
-    "rss-to-json": "^1.1.3"
+    "rss-to-json": ">=2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/node": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
-    "nodemon": "^2.0.9"
+    "@babel/core": "^7.15.5",
+    "@babel/node": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
+    "nodemon": "^2.0.12"
   }
 }
