--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mongodb": "^4.1.1",
     "mongoose": "^5.13.9",
     "request": "^2.88.2",
-    "rss-to-json": ">=2.0.2"
+    "rss-to-json": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
