--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "firebase-admin": "^9.11.1",
     "get-caller-file": "^2.0.5",
     "json-server": "^0.17.0",
-    "mongodb": "^4.1.1",
-    "mongoose": "^5.13.9",
     "request": "^2.88.2",
     "rss-to-json": "^1.1.3",
-    "simple-messenger-blocks": "file:local-npm/simple-ms-blocks"
+    "simple-messenger-blocks": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
