chore: update Node.js version requirements in package.json and GitHub workflows
- Specify Node.js engine version as >=18 in package.json to ensure compatibility
- Remove Node.js 16.x from the GitHub workflow matrix, supporting only 18.x and 20.x versions for improved performance

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Node backend for notebot",
   "main": "server.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
