fix: update smoke check in Node.js workflow to handle timeout errors
- Add 'set +e' to prevent script failure on timeout during npm start
- Ensure proper exit code handling for improved workflow reliability

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,7 @@ jobs:
 
     - name: Smoke check npm start (15s timeout)
       run: |
+        set +e
         timeout 15 npm start
         exit_code=$?
         if [ "$exit_code" -eq 124 ]; then
